# quevedo

./: .gitignore  CHANGES.md  CITATION.cff  Makefile  NOTES.md  README.md  ROADMAP.md  ROADMAP.org  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  versions.json
1.0/: 404.html  index.html
1.0/ROADMAP/: index.html
1.0/User_guide/: index.html
1.0/api/: index.html
1.0/cli/: index.html
1.0/concepts/: index.html
1.0/config/: index.html
1.0/dev/: index.html
1.0/guide/: index.html
1.0/nets/: index.html
1.0/web/: index.html
1.0/web_use/: index.html
1.1/: 404.html  index.html
1.1/api/: index.html
1.1/concepts/: index.html
1.1/config/: index.html
1.1/nets/: index.html
1.2/: 404.html  index.html  search.html  sitemap.xml
1.2/api/: index.html
1.2/cli/: index.html
1.2/concepts/: index.html
1.2/config/: index.html
1.2/nets/: index.html
1.2/pipes/: index.html
1.2/search/: search_index.json
1.2/web/: index.html
1.2/web_use/: index.html
1.3/: index.html  sitemap.xml
1.3/api/: index.html
1.3/concepts/: index.html
1.3/config/: index.html
1.3/dev/: index.html
1.3/guide/: index.html
1.3/nets/: index.html
1.3/pipes/: index.html
1.3/search/: search_index.json
1.3/web/: index.html
docs/: ROADMAP.md  ROADMAP.org  User_guide.md  api.md  cli.md  concepts.md  config.md  dev.md  guide.md  nets.md  pipes.md  todo.md  web.md  web_use.md
examples/: csv_export.py  grapheme_rotate.py  pre_annotate.py  rearrange_tags.py  rename_meta.py  rename_tags.py
examples/scripts/: check_annotations.py  csv_export.py  merge_graphemes.py
examples/toy_arithmetic/: README.md  config.toml
latest/: 404.html  index.html  search.html  sitemap.xml
latest/ROADMAP/: index.html
latest/User_guide/: index.html
latest/api/: index.html
latest/cli/: index.html
latest/concepts/: index.html
latest/config/: index.html
quevedo/: __init__.py  annotation.py  cli.py  dataset.py  default_config.toml  default_info.yaml  experiment.py  extract_graphemes.py  extract_symbols.py  generate.py  inference.py  migrate.py  network.py  pipeline.py  run_script.py  split.py  transcription.py
swrec/: cli.py  darknet.cfg  darknet.py  dataset.py  default_info.yaml  extract_symbols.py  generate.py  migrate.py  pythondarknet.py  yolo.py
tagger/: Makefile  edit.ejs  lista.ejs  package-lock.json  package.json  server.js  tagger.py
tools/: extract_symbols.py  filename_to_jsonfile.sh
v1.1/: index.html
(+82 files in other folders)
