[tool.poetry]
name = "quevedo"
description = "Tool for managing datasets of images with compositional semantics"
version = "0.1.0"
authors = ["Antonio F. G. Sevilla <afgs@ucm.es>"]
license = "OSL-3.0"
repository = "https://github.com/agarsev/quevedo"
documentation = "TODO"
keywords = ["machine learning", "computer vision", "sign language", "corpus linguistics", "dataset"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
pillow = "^8"
flask = { version = "^1.1.2", optional = true }
forcelayout = { version = "^1.0.6", optional = true }
toml = "^0.10.2"

[tool.poetry.extras]
web = [ "flask" ]
force_layout = [ "forcelayout" ]

[tool.poetry.scripts]
quevedo = "quevedo.cli:cli"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
